--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.1.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.539.0",
+    "marked": "^16.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/marked": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
